Organizando os css's

--- a/.env.example
+++ b/.env.example
@@ -37,9 +37,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1092646
+PUSHER_APP_KEY=70fa0c3bb368bfe3c5ce
+PUSHER_APP_SECRET=d3c8a08b38f894d72428
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
